# pico-scheduling

./: .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
docs/: architecture.md  faq.md  getting-started.md  hooks.py  index.md  llms.txt  skills.md  troubleshooting.md
docs/reference/: api.md  index.md
src/pico_scheduling/: __init__.py  config.py  decorators.py  registrar.py
tests/: conftest.py  test_scheduling.py
